--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.driver-class-name =org.postgresql.Driver
 spring.datasource.username = salonuser
 spring.datasource.password = webapp
 spring.datasource.url = jdbc:postgresql://localhost:5432/mysalondb
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
