Fifth commit - Clone done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,17 @@
-spring.application.name=salon-webapp
+#spring.application.name=salon-v2
+#server.port = 8081
+#spring.datasource.driver-class-name =org.postgresql.Driver
+#spring.datasource.username = salonuser
+#spring.datasource.password = webapp
+#spring.datasource.url = jdbc:postgresql://localhost:5432/mysalondb
+#spring.jpa.hibernate.ddl-auto = create
+#spring.jpa.show-sql=true
+
 server.port = 8081
-spring.datasource.driver-class-name =org.postgresql.Driver
+spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+spring.datasource.url =jdbc:mysql://localhost:3306/mysalondb
 spring.datasource.username = salonuser
 spring.datasource.password = webapp
-spring.datasource.url = jdbc:postgresql://localhost:5432/mysalondb
-spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
