--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,5 @@ spring.datasource.url =jdbc:mysql://localhost:3306/mysalondb
 spring.datasource.username = salonuser
 spring.datasource.password = webapp
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
